<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Menu"
            android:src="@drawable/ic_menu_36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/headerBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="menu" />

        <TextView
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/between_elements"
            android:text="@string/Hello"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerBarrier" />

        <TextView
            android:id="@+id/foodie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/between_elements"
            android:layout_marginTop="@dimen/between_elements"
            android:text="@string/Foodie"
            android:textColor="@color/tiffany"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/greeting"
            app:layout_constraintTop_toBottomOf="@id/headerBarrier" />

        <TextView
            android:id="@+id/searchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Search_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/greeting" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/between_elements"
            android:elevation="16dp"
            android:hint="@string/Search_recipe"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="24dp"
            app:boxCornerRadiusBottomStart="24dp"
            app:boxCornerRadiusTopEnd="24dp"
            app:boxCornerRadiusTopStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/searchText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_search_24"
                android:drawablePadding="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/middleBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="searchLayout" />

        <TextView
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/Categories"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/middleBarrier" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoriesRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/between_elements"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/categories"
            tools:listitem="@layout/item_category" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/bottomBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="categoriesRecycler" />

        <TextView
            android:id="@+id/popularRecipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/between_elements"
            android:text="@string/Popular_recipes"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottomBarrier" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipesRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/between_elements"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/popularRecipes"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_recipe" />



    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>